fix(typing): Bring sentry.auth and sentry.auth_v2 into the mypy stronglist (#108620)
Minimal changes needed, all trivial.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -423,15 +423,8 @@ module = [
     "sentry.api.serializers.rest_framework.group_notes",
     "sentry.apidocs.examples.*",
     "sentry.audit_log.services.*",
-    "sentry.auth.access",
-    "sentry.auth.authenticators.*",
-    "sentry.auth.manager",
-    "sentry.auth.providers.*",
-    "sentry.auth.services.*",
-    "sentry.auth.view",
-    "sentry.auth_v2.migrations.*",
-    "sentry.auth_v2.services.*",
-    "sentry.auth_v2.utils.*",
+    "sentry.auth.*",
+    "sentry.auth_v2.*",
     "sentry.bgtasks.*",
     "sentry.buffer.*",
     "sentry.build.*",
