ref(tests): Add instasnapshot types to event manager interface tests (#108276)
This adds types to everywhere we use the instasnapshotter in event manager interface tests. In a few cases, this meant fixing spots where we were replacing a variable's value with a value of a different type. (In such cases there are now two separate variables.)

With these changes, the interface tests now qualify for stricter typing, so they've been opted in in `pyproject.toml`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -780,6 +780,7 @@ module = [
     "tests.sentry.demo_mode.*",
     "tests.sentry.digests.*",
     "tests.sentry.discover.translation.*",
+    "tests.sentry.event_manager.interfaces.*",
     "tests.sentry.event_manager.test_event_manager",
     "tests.sentry.eventstream.*",
     "tests.sentry.eventtypes.*",
