ref: Unpin dotagents skills and update skill set (#109262)
Set `pin = false` in agents.toml so dotagents skills stay up to date
automatically instead of being pinned to specific commits. This removes
the need to manually update commit hashes and integrity checksums in
agents.lock.

Also adds the `blog-writing-guide` skill and removes
`warden-lint-judge`.

--- a/agents.toml
+++ b/agents.toml
@@ -1,6 +1,7 @@
 version = 1
-# Managed skills are gitignored; collaborators must run 'dotagents install'.
 gitignore = true
+# Keeps all the skills up to date
+pin = false
 agents = ["claude", "cursor"]
 
 [trust]
