--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -99,7 +99,7 @@ jobs:
           python3 .github/workflows/scripts/calculate-backend-test-shards.py
 
   backend-test:
-    if: needs.files-changed.outputs.backend == 'true'
+    if: needs.files-changed.outputs.backend == 'true' && needs.calculate-shards.outputs.shard-count != '0'
     needs: [files-changed, calculate-shards]
     name: backend test
     runs-on: ubuntu-24.04
