types(snuba): Improve Snuba type coverage (#109374)
Move more of Snuba code (specifically, the subset that interacts with
code owned by alerts-notifications) to the strong set.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -667,7 +667,11 @@ module = [
     "sentry.silo.*",
     "sentry.snuba.metrics.extraction",
     "sentry.snuba.metrics.naming_layer.*",
+    "sentry.snuba.models",
     "sentry.snuba.query_subscriptions.*",
+    "sentry.snuba.sessions",
+    "sentry.snuba.snuba_query_validator",
+    "sentry.snuba.tasks",
     "sentry.spans.consumers.process_segments.*",
     "sentry.spans.grouping.*",
     "sentry.stacktraces.platform",
@@ -883,6 +887,8 @@ module = [
     "tests.sentry.similarity.backends.*",
     "tests.sentry.snuba.metrics.test_metrics_layer.*",
     "tests.sentry.snuba.metrics.test_metrics_query_layer.*",
+    "tests.sentry.snuba.test_query_subscription_consumer",
+    "tests.sentry.snuba.test_tasks",
     "tests.sentry.spans.grouping.*",
     "tests.sentry.tasks.integrations.*",
     "tests.sentry.tasks.test_code_owners",
