--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
     "@sentry-internal/rrweb-player": "2.40.0",
     "@sentry-internal/rrweb-snapshot": "2.40.0",
     "@sentry/conventions": "^0.4.0",
-    "@sentry/core": "10.27.0",
-    "@sentry/node": "10.27.0",
-    "@sentry/react": "10.27.0",
+    "@sentry/core": "10.41.0-beta.0",
+    "@sentry/node": "10.41.0-beta.0",
+    "@sentry/react": "10.41.0-beta.0",
     "@sentry/release-parser": "^1.3.1",
     "@sentry/status-page-list": "^0.6.1",
     "@sentry/toolbar": "1.0.0-beta.16",
@@ -193,7 +193,7 @@
     "@prettier/plugin-oxc": "0.1.3",
     "@sentry-internal/rrweb-types": "2.40.0",
     "@sentry/jest-environment": "6.1.0",
-    "@sentry/profiling-node": "10.27.0",
+    "@sentry/profiling-node": "10.41.0-beta.0",
     "@styled/typescript-styled-plugin": "^1.0.1",
     "@tanstack/eslint-plugin-query": "5.83.1",
     "@testing-library/dom": "10.4.0",
